# gpt-discord-bot

./: Cargo.toml  README.md
.github/workflows/: ci-cd.yml
src/: main.rs
src/commands/: gpt.rs  image.rs  mod.rs
