[package]
name = "gpt-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
reqwest = "0.11.14"
serde = "1.0.156"
serde_json = "1.0.94"
serenity = { version = "0.11.5", features = ["cache", "model", "collector"] }
tokio = { version = "1.26.0", features = ["full"] }

